--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ nav ul li a:hover::after {
 }
 
 .banner {
-  background-image: url("https://images.unsplash.com/photo-1669231838364-827ad65ee9a8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80");
+  background-image: url("https://random.imagecdn.app/1000/500");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
